fixed body codes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         font-family: sans-serif;
         display: flex;
         background-color: hsl(212, 45%, 89%);
-        margin: 15%;
+        min-height: 100vh;
         flex-direction: column;
       }
       .attribution {
@@ -34,7 +34,7 @@
         color: hsl(228, 45%, 44%);
       }
       .card {
-        width: 200px;
+        max-width: 12.5rem;
         height: 320px;
         background-color: #fff;
         border-radius: 15px;
